--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,11 @@
 		<groupId>com.tz.ips</groupId>
 		<artifactId>ips-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
+		<relativePath>../ips-parent</relativePath>
 	</parent>
 	<groupId>pub.ljh</groupId>
 	<artifactId>wc-pay</artifactId>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 		
 	<dependencies>
@@ -19,7 +21,6 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.30</version>
 		</dependency>
 		<dependency>
 			<groupId>org.dom4j</groupId>
