--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>spring-boot-starter</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
